@@ -1,6 +1,6 @@
 {
   "name": "simp-simpkv",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "author": "simp",
   "summary": "SIMPkv providers",
   "license": "Apache-2.0",
@@ -34,6 +34,18 @@
     },
     {
       "operatingsystem": "Rocky",
+      "operatingsystemrelease": [
+        "8"
+      ]
+    },
+    {
+      "operatingsystem": "AlmaLinux",
+      "operatingsystemrelease": [
+        "8"
+      ]
+    },
+    {
+      "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
         "8"
       ]
